Implementação colaborador.
